--- a/sandbox.html
+++ b/sandbox.html
@@ -7,6 +7,38 @@
         <script src="http://masonry.desandro.com/jquery.masonry.min.js"></script>
         <link rel="stylesheet" href="css/reset.css">
         <style>
+            body{
+                font-family: "helvetica neue",arial,sans-serif;
+                font-size: 13px;
+                color: #444;
+            }
+            #header {
+                position: relative;
+                z-index: 105;
+                box-shadow:0 0 transparent;
+                -moz-box-shadow:0 0 transparent;
+                -webkit-box-shadow:0 0 transparent;
+                top:0;
+                right: 0;
+                left:0;
+                height:44px;
+                background-color: #faf7f7;
+            }
+            #catgory {
+                position: absolute;
+                z-index: 101;
+                top:44px;
+                right: 0;
+                left:0;
+                text-align: center;
+                font-size:13px;
+                color:#8c7e7e;
+                background-color: #faf7f7;
+                border-top:1px solid #cfcaca;
+                box-shadow:inset 0 1px #fff, 0 1px 3px rgba(34,25,25,0.4);
+                -moz-box-shadow:inset 0 1px #fff,0 1px 3px rgba(34,25,25,0.4);
+                -webkit-box-shadow:inset 0 1px #fff,0 1px 3px rgba(34,25,25,0.4);
+            }
             #wrapper {position: relative; width: auto; min-width: 933px; margin: 0 auto; border: none;}
            
             #waterfall{           
@@ -68,6 +100,8 @@ var bro=$.browser;
         </script>
     </head>
     <body>
+        <div id="header"> </div>
+        <div id="catgory"></div>
         <div id="wrapper" class="BoardLayout">
             <div id="waterfall" >
                 <div class="box">
