--- a/sandbox.html
+++ b/sandbox.html
@@ -39,14 +39,22 @@
                 -moz-box-shadow:inset 0 1px #fff,0 1px 3px rgba(34,25,25,0.4);
                 -webkit-box-shadow:inset 0 1px #fff,0 1px 3px rgba(34,25,25,0.4);
             }
-            #wrapper {position: relative; width: auto; min-width: 933px; margin: 0 auto; border: none;}
+            #wrapper {
+                position: relative; 
+                width: auto;
+                width:1185px;
+                opacity:1; 
+                min-width: 933px; 
+                margin: 0 auto; 
+                border: none;
+            }
            
             #waterfall{           
                 position: relative;
                 min-height: 500px;
                 margin: 60px auto 0;
                 background-color:#00FF11;
-                display:hidden;
+                
             }
             .item1 {
                 width:192px;
@@ -64,11 +72,14 @@
 }
 .box {
     position: absolute;
+    margin-right:15px;
+    margin-bottom:15px;
     width: 192px; 
-    padding: 15px 15px 0; 
+    padding: 15px; 
     font-size: 11px; 
     background-color: #fff; 
     float:left;
+    word-wrap: break-word;
     box-shadow: 0 1px 3px rgba(34,25,25,0.4); 
     -moz-box-shadow: 0 1px 3px rgba(34,25,25,0.4); 
     -webkit-box-shadow: 0 1px 3px rgba(34,25,25,0.4);
@@ -112,7 +123,7 @@ var bro=$.browser;
                 <div class="box"><p> 阿阿斯顿发撒旦法撒旦法撒旦法撒旦法第三方1阿斯顿发生大发撒旦法阿斯顿发生大幅</p></div>
                 <div class="box">
                     <a href="#">
-                        <img src="http://media-cdn.pinterest.com/upload/60939401177526095_SUxlUPJz_b.jpg" height="300"alt="&lt;3">
+                        <img src="http://media-cdn.pinterest.com/upload/60939401177526095_SUxlUPJz_b.jpg" height="258"alt="&lt;3">
                     </a>
                 </div>
                 <div class="box">
@@ -130,20 +141,20 @@ var bro=$.browser;
                 <div class="box"><p> 阿阿斯顿发撒旦法撒旦法撒旦法撒旦法第三方1阿斯顿发生大发撒旦法阿斯顿发生大幅</p></div>
                  <div class="box">
                     <a href="#">
-                        <img src="http://media-cdn.pinterest.com/upload/60939401177526095_SUxlUPJz_b.jpg" height="258" alt="&lt;3">
+                        <img src="http://pic.gxcms.com/bdyyzy/video/2011-12/4ef5eaa1a09ef.jpg" height="258" alt="&lt;3">
                     </a>
                 </div>
                 <div class="box">
                     <a href="#">
-                        <img src="http://media-cdn.pinterest.com/upload/60939401177526095_SUxlUPJz_b.jpg" height="258" alt="&lt;3">
+                        <img src="http://pic.gxcms.com/bdyyzy/video/2011-10/4e8885ffd236b.jpg" height="258" alt="&lt;3">
                     </a>
                 </div><div class="box">
                     <a href="#">
-                        <img src="http://media-cdn.pinterest.com/upload/60939401177526095_SUxlUPJz_b.jpg" height="258"alt="&lt;3">
+                        <img src="http://pic.gxcms.com/bdyyzy/video/2011-12/4efd62e902a99.jpg" height="258"alt="&lt;3">
                     </a>
                 </div><div class="box">
                     <a href="#">
-                        <img src="http://media-cdn.pinterest.com/upload/60939401177526095_SUxlUPJz_b.jpg" height="258"alt="&lt;3">
+                        <img src="http://pic.gxcms.com/bdyyzy/video/2011-12/4efd790fbc526.jpg" height="258"alt="&lt;3">
                     </a>
                 </div><div class="box">
                     <a href="#">
